-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.15.3
-
None
-
84613e0e4 (dev)
Currently, QMYSQL Driver does not support MYSQL_OPT_LOCAL_INFILE as part of setConnectOptions(). This makes it not possible to execute "LOAD_DATA_LOCAL_INFILE" with MySQL Server 8.X even if "local_infile = 1" is in [mysqld]
The attached diff file adds support for LOAD_DATA_LOCAL_INFILE
| For Gerrit Dashboard: QTBUG-104916 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 424719,5 | SQL/MySQL: add connect option MYSQL_OPT_LOCAL_INFILE | dev | qt/qtbase | Status: MERGED | +2 | 0 |